--- a/projectsystem/register.css
+++ b/projectsystem/register.css
@@ -130,7 +130,7 @@ input {
 }
 
 input::placeholder {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.85);
 }
 
 input:focus {
